corrected spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,7 +16,7 @@
 .title {
   font-size: 1.91rem;
   font-family: Inter-SemiBold;
-  margin-bottom: auto;
+  margin-bottom: -.3rem;
   margin-top:1.75rem;
 }
 
